--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<center><html lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Placement System</title>
   </head>
 
-  <body>
+  <body id="su">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-</center>
